css header fixes - aligning button and search box

--- a/newsrc/code/media/com_acctexp/less/aec/adminform.less
+++ b/newsrc/code/media/com_acctexp/less/aec/adminform.less
@@ -78,6 +78,8 @@ div.rewriteinfoblock {
 
 div.adminheading {
 	padding: 18px 18px 6px;
+	margin-top: 4px;
+
 	h2 {
 		float: left;
 		padding-left: 18px;
