--- a/newsrc/code/media/com_acctexp/less/aec/buttons.less
+++ b/newsrc/code/media/com_acctexp/less/aec/buttons.less
@@ -1,7 +1,7 @@
 .aec-buttons {
 	float: right;
 	margin-right: 1px;
-	padding: 30px 24px 24px 24px;
+	padding: 22px 24px 24px 24px;
 	background: #fff;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
